fixing issues with mobile vh positioning and mobile word wrap

--- a/src/main/resources/static/book.css
+++ b/src/main/resources/static/book.css
@@ -5,6 +5,14 @@ body {
     padding: 0;
     margin: 0;
     font-size: 1.5em;
+
+    min-height: 100vh;
+    /* mobile viewport bug fix */
+    min-height: -webkit-fill-available;
+}
+
+html {
+  height: -webkit-fill-available;
 }
 
 /* ui regions */
@@ -15,6 +23,10 @@ body {
     top: 5vh;
     display: block;
     position: fixed;
+    word-wrap: break-word;
+}
+#ch_content {
+    background-color: #99990099;
 }
 
 #ch_shadow_content {
@@ -31,26 +43,32 @@ body {
     left: 0;
     width: 10vw;
     height: 90vh;
-    background-color: #ff000099
+    background-color: #ff000099;
+    position: fixed;
 }
 #ch_next {
     top: 0;
     right: 0;
     width: 10vw;
     height: 90vh;
-    background-color: #00ff0099
+    background-color: #00ff0099;
+    position: fixed;
 }
-#toolsButtonLeft {
+#ch_tools_left {
     bottom: 0;
     left: 0;
     width: 10vw;
     height: 10vh;
+    background-color: #ff00ff99;
+    position: fixed;
 }
-#toolsButtonRight {
+#ch_tools_right {
     bottom: 0;
     right: 0;
     width: 10vw;
     height: 10vh;
+    background-color: #00ffff99;
+    position: fixed;
 }
 #pageContainer {
     width: 80vw;
